# MyersAndStauffer_GhostQA

./: .gitignore  GhostQA.sln  MyersAndStaufferAutomation.sln  README.md  deploy.dev.yml  deploy.production.ps1  deploy.production.yml  deploy.ps1  deploy.sh  deploy.stage.ps1  deploy.stage.yml  deploy.yml  docker-compose.yml  example.json  my_script.yml  remote_docker_connection_check.py  test.csv  test.html  test.md
Agent/: .env  Dockerfile  Pipfile  db.sqlite3  docker-compose.yml  docker_run.py  main.py  pyproject.toml  requirements.txt  system_info.py
Agent/Agent/: asgi.py  settings.py  urls.py  wsgi.py
Agent/app/uploads/: uploads_performace_tests_log_6cjxQel.csv
Agent/code_management/: api_call.py  build_cypress.py  cypress_file_setup.py  jmeter_file_setup.py  utils.py
Agent/docker_code/: client.py  container_run.py
Agent/file_handler/: serializers.py  views.py
Agent/file_handler/management/commands/: start_agent.py
Agent/jmeter/: Dockerfile  docker-compose.yml
SeleniumReportAPI/: Dockerfile  Dockerfile.migrations  GhostQA_API.csproj  Program.cs  SeleniumReportAPI.csproj  appsettings.json  entrypoint.sh  migrations.sh
SeleniumTestReport/: Global.asax  Global.asax.cs  SeleniumTestReport.csproj  Web.config  packages.config
TestSeleniumReport/: Dockerfile  Program.cs  TestSeleniumReport.csproj  appsettings.json
djangoapp/: Dockerfile  Pipfile  ReadMe.Md
documents/: Docker-composefile.docx  Relaese_pipeline_.NetApi_frontend.docx  Relaese_pipeline_AWS_code_engine.docx
seleniumreact_app/: Dockerfile  GhostQA_App.esproj  package-lock.json  (+1 more)
(+815 files in other folders)
