[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Diljot Singh <diljots99@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "==3.8.1"
django = "==4.0.0"
django-cors-headers = "==4.3.1"
djangorestframework = "==3.15.1"
sqlparse = "==0.4.4"
tzdata = "==2024.1"
requests = "==2.31.0"
psutil = "==5.9.8"
jsbeautifier = "==1.15.1"
colorama = "^0.4.6"
docker = "^7.0.0"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
